--- a/app/assets/stylesheets/admin/navigation.css.scss
+++ b/app/assets/stylesheets/admin/navigation.css.scss
@@ -20,10 +20,32 @@
         text-decoration: none;
         color: #444;
         padding: 20px 10px;
-        @include vertical-gradient(darken(#E8EBF2, 2%), darken(#E8EBF2, 5%));
+        @include vertical-gradient(#E8EBF2, darken(#E8EBF2, 2%));
         border-top: 1px solid lighten(#E8EBF2, 20%);
         border-bottom: 1px solid darken(#E8EBF2, 10%);
+
+        &.active {
+          @include vertical-gradient(darken(#E8EBF2, 5%), darken(#E8EBF2, 10%));
+          border-top: 1px solid #E8EBF2;
+          border-bottom: 1px solid darken(#E8EBF2, 15%);
+        }
       }
+    }
+  }
+}       
+
+#secondary-navigation {
+  ul {
+    li {
+      display: block;
+      font: {
+        size: 14px;
+      }
+      color: #222;
+      padding: 20px 10px;
+      @include vertical-gradient(#FEFEFE, #EFEFEF);
+      border-top: 1px solid #FFFFFF;
+      border-bottom: 1px solid #DEDEDE;
     }
   }
 }
