--- a/app/assets/stylesheets/admin/navigation.css.scss
+++ b/app/assets/stylesheets/admin/navigation.css.scss
@@ -31,7 +31,7 @@
 
         &.active {
           @include vertical-gradient(lighten(#62B96C, 5%), darken(#62B96C, 5%));
-          border-top: 1px solid #62B96C;
+          border-top: 1px solid darken(#62B96C, 10%);
           border-bottom: 1px solid darken(#62B96C, 15%);
           color: white;
           text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
@@ -57,8 +57,8 @@
 
       &.active {
         @include vertical-gradient(#E3F5CE, darken(#E3F5CE, 5%));
-        border-top: 1px solid lighten(#E3F5CE, 5%);
-        border-bottom: 1px solid darken(#E3F5CE, 10%);
+        border-top: 1px solid darken(#E3F5CE, 10%);
+        border-bottom: 1px solid darken(#E3F5CE, 20%);
       }
     }
   }
