--- a/app/assets/javascripts/backbone/templates/posts/form.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/posts/form.jst.ejs
@@ -14,7 +14,7 @@
     <h5>Meta Data</h5>
     <div>
       <div class="group-container">
-      <% if (meta_names !== 'undefined') { %>
+      <% if (typeof(meta_names) !== 'undefined') { %>
       <% _.each(meta_names, function(meta_name) { %>
         <div class="group">
           <% if (meta_name.id) { %>
@@ -49,7 +49,7 @@
     <h5>Custom Fields</h5>
     <div>
       <div class="group-container">
-      <% if (custom_fields !== 'undefined') { %>
+      <% if (typeof(custom_fields) !== 'undefined') { %>
       <% _.each(custom_fields, function(custom_field) { %>
         <div class="group">
           <% if (custom_field.id) { %>
