--- a/app/assets/javascripts/backbone/templates/posts/item.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/posts/item.jst.ejs
@@ -1,5 +1,6 @@
 <article class="resource post" data-id="<%= id %>">
   <div class="title">
     <%= title %>
+    <a href='#' class='destroy'>Delete</a>
   </div>
 </article>
