--- a/app/assets/stylesheets/admin/navigation.css.scss
+++ b/app/assets/stylesheets/admin/navigation.css.scss
@@ -50,7 +50,7 @@
         size: 14px;
       }
       color: #222;
-      padding: 20px 10px;
+      padding: 0;
       @include vertical-gradient(#FEFEFE, #EFEFEF);
       border-top: 1px solid #FFFFFF;
       border-bottom: 1px solid #DEDEDE;
