--- a/app/assets/stylesheets/admin/panes.css.scss
+++ b/app/assets/stylesheets/admin/panes.css.scss
@@ -28,7 +28,7 @@
     }
     
     &:last-child {
-      background: transparent url('/backgrounds/fancy_deboss.png') top left repeat;
+      background: white;
       border-left: 1px solid #cecece;
       border-right: 1px solid transparent;
       padding: 10px;
